# audio-programming-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh
.cache/clangd/index/: AlternateSet.hh.88B6564F7B6A05A3.idx  AlternateSubst.hh.707D61B772C08820.idx  AlternateSubstFormat1.hh.F81EE3387D54EA29.idx  Anchor.hh.0BDC33B88C49210C.idx  AnchorFormat1.hh.F13706EC350348AC.idx  AnchorFormat2.hh.C339A9549835B3D5.idx  AnchorFormat3.hh.974C999FFBE1C05F.idx  AnchorMatrix.hh.F73C6EE5A5E604F7.idx  CBDT.hh.34C6A4B610C8484C.idx  COLR.hh.52EC4B8D23F8C448.idx  CPAL.hh.B9BE517DD173CE04.idx  ChainContextPos.hh.0B22B189B2A823BE.idx  ChainContextSubst.hh.6191A72E9466426D.idx  Common.hh.1B71754E9FAA2908.idx  Common.hh.A86FA34871D95174.idx  CompositeGlyph.hh.BF380BF85FF07459.idx  ContextPos.hh.5F22F5E5E17BE96F.idx  ContextSubst.hh.15CA233D1D55A6AD.idx  Coverage.hh.B980FB07F99AE2E6.idx  CoverageFormat1.hh.9D08D43BA62EF98C.idx  CoverageFormat2.hh.80818486C453D7E6.idx  CursivePos.hh.A98B772382654084.idx  CursivePosFormat1.hh.16065E4D09465EE8.idx  ExtensionPos.hh.FDF85640FEEA6274.idx  ExtensionSubst.hh.D360E4C61E16D7BE.idx  GDEF.hh.599B5CCACD448A71.idx  GPOS.hh.4C3C9300476D9333.idx  GSUB.hh.2A86E7C42D158F70.idx  GenericParameterEditor.cpp.D106297AAF2AE758.idx  GenericParameterEditor.h.5A006931003D935F.idx  Glyph.hh.C1214C9A656F7F4F.idx  GlyphHeader.hh.4C9D3436E4756E0A.idx  Ligature.hh.D239F5F26010707A.idx  LigatureArray.hh.4FF72B7246CFDAB9.idx  LigatureSet.hh.DB88A3147DD1BBE2.idx  LigatureSubst.hh.DBC206E72A41ED5C.idx  LigatureSubstFormat1.hh.6255DF9730AC2D19.idx  MarkArray.hh.6CA88F89588968E6.idx  MarkBasePos.hh.097A459D69387C5A.idx  MarkBasePosFormat1.hh.F770AC00140D9178.idx  (+1580 more)
modules/mrta_utils/Source/GUI/: GenericParameterEditor.cpp
projects/DSP/: DelayLine.cpp  DelayLine.h  Filter.h  Oscillator.cpp  Oscillator.h  Resonator.cpp  Resonator.h  Resources.cpp  Resources.h  StateVariableFilter.cpp  StateVariableFilter.h  SynthVoice.cpp  SynthVoice.h  dsp.h
projects/Ring/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
